[Fix: Updates] Images overflow

--- a/src/public/less/pags/updates.less
+++ b/src/public/less/pags/updates.less
@@ -75,6 +75,10 @@
     font-size: 1.2rem;
     font-weight: 300;
     line-height: 1.5;
+
+    img {
+      max-width: 100%;
+    }
   }
 }
 
